@@ -918,6 +918,8 @@
     "ehi_buffs_other_stamina" : "Stamina",
     "ehi_buffs_other_weapon_swap" : "Výměna zbraní",
     "ehi_buffs_other_weapon_swap_persistent" : "Neschovávat výměnu zbraní",
+    "ehi_buffs_other_carry_interaction_cooldown" : "Prodleva na další interakci s pytlem po odhození",
+    "ehi_buffs_other_carry_interaction_cooldown_persistent" : "Neschovávat Prodlevu na další interakci s pytlem po odhození",
     "ehi_buffs_other_dodge" : "Šance na Dodge",
     "ehi_buffs_other_dodge_refresh" : "Aktualizace šance na Dodge",
     "ehi_buffs_other_dodge_refresh_desc" : "Nastavuje jak často se má šance aktualizovat za sekundu",
@@ -988,6 +990,7 @@
     "ehi_buffs_hint_reload_increase" : "Rld+",
     "ehi_buffs_hint_movement_increase" : "Mov+",
     "ehi_buffs_hint_regen" : "Regen",
+    "ehi_buffs_hint_cooldown" : "Cooldown",
 
     "ehi_inventory_menu" : "Inventory",
 
