@@ -7,24 +7,6 @@ local original =
     _begin_assault_task = GroupAIStateBesiege._begin_assault_task
 }
 
-if EHI:GetOptionAndLoadTracker("show_captain_damage_reduction") then
-    original.set_phalanx_damage_reduction_buff = GroupAIStateBesiege.set_phalanx_damage_reduction_buff
-    function GroupAIStateBesiege:set_phalanx_damage_reduction_buff(damage_reduction, ...)
-        original.set_phalanx_damage_reduction_buff(self, damage_reduction, ...)
-        managers.ehi_tracker:SetChancePercent("PhalanxDamageReduction", damage_reduction or 0)
-    end
-    managers.ehi_assault:AddAssaultModeChangedCallback(function(mode)
-        if mode == "phalanx" then
-            managers.ehi_tracker:AddTracker({
-                id = "PhalanxDamageReduction",
-                class = "EHIPhalanxDamageReductionTracker",
-            })
-        else
-            managers.ehi_tracker:ForceRemoveTracker("PhalanxDamageReduction")
-        end
-    end)
-end
-
 if EHI:GetOption("show_assault_delay_tracker") then
     function GroupAIStateBesiege:_begin_assault_task(...)
         original._begin_assault_task(self, ...)
