@@ -9,15 +9,19 @@ if EHI:CheckLoadHook("Setup") then
     end)
     return
 end
-dofile(EHI.LuaPath .. "EHITrackerManager.lua")
-dofile(EHI.LuaPath .. "EHIWaypointManager.lua")
-managers.ehi_deployable = blt.vm.dofile(EHI.LuaPath .. "EHIDeployableManager.lua")
+managers.ehi_tracker = blt.vm.dofile(EHI.LuaPath .. "EHITrackerManager.lua")
+managers.ehi_waypoint = blt.vm.dofile(EHI.LuaPath .. "EHIWaypointManager.lua")
+if EHI:GetOption("show_equipment_tracker") and (EHI:GetOption("show_equipment_doctorbag") or EHI:GetOption("show_equipment_ammobag") or EHI:GetOption("show_equipment_bodybags") or EHI:GetOption("show_equipment_grenadecases") or EHI:GetOption("show_equipment_firstaidkit")) then
+    managers.ehi_deployable = blt.vm.dofile(EHI.LuaPath .. "EHIDeployableManager.lua")
+end
 managers.ehi_trade = blt.vm.dofile(EHI.LuaPath .. "EHITradeManager.lua")
 managers.ehi_escape = blt.vm.dofile(EHI.LuaPath .. "EHIEscapeChanceManager.lua")
 managers.ehi_assault = blt.vm.dofile(EHI.LuaPath .. "EHIAssaultManager.lua")
 managers.ehi_unlockable = blt.vm.dofile(EHI.LuaPath .. "EHIUnlockableManager.lua")
 managers.ehi_phalanx = blt.vm.dofile(EHI.LuaPath .. "EHIPhalanxManager.lua")
-managers.ehi_timer = blt.vm.dofile(EHI.LuaPath .. "EHITimerManager.lua")
+if EHI:GetTrackerOrWaypointOption("show_timers", "show_waypoints_timers") then
+    managers.ehi_timer = blt.vm.dofile(EHI.LuaPath .. "EHITimerManager.lua")
+end
 dofile(EHI.LuaPath .. "EHILootManager.lua")
 managers.ehi_sync = blt.vm.dofile(EHI.LuaPath .. "EHISyncManager.lua")
 managers.ehi_hook = blt.vm.dofile(EHI.LuaPath .. "EHIHookManager.lua")
@@ -33,16 +37,14 @@ local original =
 ---@param managers managers
 function Setup:init_managers(managers, ...)
     original.init_managers(self, managers, ...)
-    managers.ehi_tracker = EHITrackerManager:new()
-    managers.ehi_waypoint = EHIWaypointManager:new()
+    managers.ehi_tracker:post_init()
+    managers.ehi_waypoint:post_init()
     managers.ehi_trade:post_init(managers.ehi_tracker)
     managers.ehi_escape:post_init(managers.ehi_tracker)
     managers.ehi_assault:post_init(managers.ehi_tracker)
     managers.ehi_unlockable:post_init(managers.ehi_tracker)
     managers.ehi_phalanx:init_finalize(managers.ehi_tracker, managers.ehi_hook, managers.ehi_assault)
-    managers.ehi_deployable:post_init(managers.ehi_tracker)
     managers.ehi_experience:TrackersInit(managers.ehi_tracker)
-    managers.ehi_timer:post_init(managers.ehi_tracker, managers.ehi_waypoint)
     managers.ehi_loot = EHILootManager:new(managers.ehi_tracker, managers.ehi_waypoint)
     managers.ehi_hook:post_init(managers.ehi_tracker, managers.ehi_loot)
     managers.ehi_tracking:post_init(managers.ehi_tracker, managers.ehi_waypoint)
